--- a/blogger.html
+++ b/blogger.html
@@ -24,7 +24,7 @@
     <div class="nav-holder text-center">
      <nav class="bg-default">
       <ul class="text-center row bg-dark">
-        <li class="col-md-3"> <a href="homepage.html" class="btn btn-dark btn-block" role="button">Home</a></li>
+        <li class="col-md-3"> <a href="index.html" class="btn btn-dark btn-block" role="button">Home</a></li>
         <li class="col-md-3"> <a href="about-us.html" class="btn btn-dark btn-block" role="button" >About us</a></li>
         <li class="col-md-3"> <a href="blogger.html" class="btn btn-dark btn-block" role="button">Blog</a></li>
         <li class="col-md-3"> <a href="reviews.html" class="btn btn-dark btn-block" role="button">Reviews</a></li>
