--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Things that are needed:
                 <a href="https://www.stihlusa.com/" target="_blank">Stihl</a>
             </p>
             <p id="homepage4">
-                <a href="https://www.chevrolet.com/" target="_blank">Chevrolet</a>
+                <a href="https://www.yeti.com/" target="_blank">Yeti</a>
             </p>
         </div>
     </div>
